--- a/sequelize/.env.development
+++ b/sequelize/.env.development
@@ -1,15 +1,15 @@
-DB_PORT=5433
-DB_HOST=localhost
-DB_USERNAME=dev
-DB_PASSWORD="MjARd8Ykb^zVQ$ks72"
-DB_DATABASE=core
-DB_LOGGING=false
-DB_DIALECT=postgres
+DB_PORT=
+DB_HOST=
+DB_USERNAME=
+DB_PASSWORD=
+DB_DATABASE=
+DB_LOGGING=
+DB_DIALECT=
 
-LOGGING_FILENAME=./logs/ms-prescriptions-development.log
-LOGGING_LEVEL=all
+LOGGING_FILENAME=
+LOGGING_LEVEL=
 
-API_PORT=3007
-API_PROJECT=demo
-API_NAME=demo
-API_VERSION=1.0.a0
+API_PORT=
+API_PROJECT=
+API_NAME=
+API_VERSION=
