--- a/typeorm/.env.development
+++ b/typeorm/.env.development
@@ -1,13 +1,13 @@
-DB_PORT=5433
-DB_HOST=172.16.10.6\SQL2019
-DB_USERNAME=parthesh
-DB_PASSWORD=parthesh
-DB_DATABASE=RMS
-DB_LOGGING=false
-DB_DIALECT=mssql
+DB_PORT=
+DB_HOST=
+DB_USERNAME=
+DB_PASSWORD=
+DB_DATABASE=
+DB_LOGGING=
+DB_DIALECT=
 DB_SCHEMA=
 
-API_PORT=3007
-API_PROJECT=demo
-API_NAME=demo
-API_VERSION=1.0.a0
+API_PORT=
+API_PROJECT=
+API_NAME=
+API_VERSION=
