--- a/sequelize/package.json
+++ b/sequelize/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "set NODE_ENV=development&& ts-node-dev --respawn src/index.ts",
     "build": "tsc",
+    "format": "prettier --write \"src/**/*.{ts,js,json,md}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,19 +14,20 @@
   "license": "ISC",
   "description": "Base Node + TypeScript project for quick setup",
   "dependencies": {
-    "@types/express": "^5.0.1",
-    "@types/i18n": "^0.13.12",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "i18n": "^0.15.1",
     "pg": "^8.15.1",
     "sequelize": "^6.37.7",
-    "sequelize-typescript": "^2.1.6",
-    "ts-node-dev": "^2.0.0"
+    "sequelize-typescript": "^2.1.6"
   },
   "devDependencies": {
+    "@types/express": "^5.0.1",
+    "@types/i18n": "^0.13.12",
     "@types/node": "^22.14.1",
+    "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   },
   "bin": {
